Created OSSaveOperations.save(...) method and related internal utils