@@ -19,6 +19,7 @@
                 <configuration>
                     <source>18</source>
                     <target>18</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
